styles.css
@import url("https://fonts.googleapis.com/css2?family=Noto+Nastaliq+Urdu:wght@500&display=swap");
@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600;800&display=swap");

html {
  margin: 0;
  padding: 0;
  height: 100%;
  background: linear-gradient(
    144deg,
    rgba(2, 0, 36, 1) 0%,
    rgba(41, 41, 45, 1) 50%,
    rgba(78, 85, 87, 1) 100%
  ) !important;
}

body {
  background: transparent;
  font-family: "League Spartan", sans-serif !important;
  padding: 0 16px;
  width: 100%;
  min-height: 100vh;
  display: flex !important;
  flex-direction: column !important;
  justify-content: center !important;
  align-items: center !important;
  transition: all 0.3s ease-in-out !important;
}

h1#gradientLogo {
  font-size: 3rem !important;
  font-weight: 800 !important;
  margin-bottom: 0px;
  background: linear-gradient(
    144deg,
    rgba(69, 194, 112, 1) 0%,
    rgba(33, 205, 195, 1) 100%
  );
  -webkit-background-clip: text;
  background-clip: text;
  color: transparent;
  display: inline-block;
  text-align: left;
}

h1#screenshotLogo {
  font-size: 2rem !important;
  font-weight: 600 !important;
  margin-bottom: 0px;
  color: rgba(69, 194, 112, 1);
  display: inline-block;
  text-align: left;
}

h1#screenshotLogo span {
  color: rgba(33, 205, 195, 1);
  font-size: 1rem !important;
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.fade-in {
  animation: fadeIn 0.5s ease-out;
}

@keyframes gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

@keyframes swipeLeft {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-120%);
  }
}

@keyframes swipeRight {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(120%);
  }
}

.swipe-left {
  animation: swipeLeft 0.5s forwards;
}

.swipe-right {
  animation: swipeRight 0.5s forwards;
}

a,
a:visited {
  color: #cb9b69 !important;
  text-decoration: none;
}

a:hover {
  color: #fff;
}

.btn-about {
  color: white;
  background-color: transparent;
  text-transform: uppercase;
  font-weight: 600;
  letter-spacing: 1px;
  text-decoration: none;
  padding: 0;
}

.header {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.container {
  min-height: calc(100vh - 3rem);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  z-index: 99;
}

.btn:focus {
  box-shadow: none !important;
}

.hidden {
  display: none;
}

#verseDisplay {
  border: 0;
  padding: 12px 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  border-radius: 12px;
  color: white;
  background-color: transparent;
  position: relative;
  z-index: 99;
  flex: 0 1 auto;
}

#verseDisplay .surah::before {
  content: "";
  height: 1px;
  width: 100px;
  display: block;
  background: rgba(255, 255, 255, 0.5);
  margin: 24px 0;
}

#verseDisplay .verse,
#verseDisplay .surah {
  text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
  position: relative;
  z-index: 9;
  text-align: left;
}

#verseDisplay .verse {
  margin-bottom: 0;
}

#verseDisplay.urdu-style {
  text-align: right;
  direction: rtl;
  word-wrap: normal;
}

#verseDisplay.urdu-style .verse {
  font-family: "Noto Nastaliq Urdu", serif;
  font-size: 16px;
  line-height: 250%;
  word-wrap: normal;
}

#verseDisplay.urdu-style .verse,
#verseDisplay.urdu-style .surah {
  text-align: right;
  direction: rtl;
  word-wrap: normal;
}

.logo {
  text-align: center;
  margin-bottom: 24px;
  padding-top: 24px;
  position: relative;
  z-index: 99;
}

.logo img {
  position: relative;
  width: 60px;
}

.verse {
  font-size: 24px;
  line-height: 140%;
  font-weight: 700;
}

.verse:first-letter {
  text-transform: uppercase;
}

.btn-custom {
  color: white !important;
  height: 44px;
  line-height: 34px;
  border-radius: 100px;
  width: 44px;
}

.btn-custom.one {
  background-color: #2e536b !important;
}

.btn-custom.two {
  background-color: #564020 !important;
}

.btn-custom.three {
  background-color: #cb9b69 !important;
}

.btn-custom.white {
  border-color: #fff !important;
  background-color: transparent !important;
}

.btn.disabled {
  opacity: 0.4 !important;
  pointer-events: none;
}

#langToggleBtn {
  background-color: transparent !important;
  color: #fff !important;
  border-radius: 100px;
  border: 0 !important;
  height: 44px;
  line-height: 34px;
  border-color: transparent !important;
  font-size: 20px;
}
#langToggleBtn:focus,
#langToggleBtn:active {
  border: 0 !important;
  border-color: transparent !important;
  box-shadow: none !important;
}

.btn-container {
  width: 100%;
  display: flex;
  gap: 12px;
  align-items: center;
  justify-content: space-between;
  margin-top: 12px;
}

.btn-container .left {
  display: flex;
  gap: 12px;
}

.modal-body p {
  font-size: 18px;
}

.footer {
  width: 100%;
  font-size: 12px;
  text-align: center;
  padding-bottom: 12px;
  color: #cb9b69;
  display: flex;
  flex-direction: column;
  gap: 12px;
  margin-top: 24px;
}

.swipe-instruction {
  text-align: center;
  font-size: 14px;
  justify-content: center;
  gap: 6px;
  align-items: center;
  padding: 0 0 12px 0;
  margin: 0;
  color: rgba(255, 255, 255, 0.2);
}

.swipe-instruction > span {
  font-size: 14px;
}

#datetime {
  padding-bottom: 6px;
  color: rgba(255, 255, 255, 0.5);
}

